--- a/Experiments/Bo/helloworld/src/main/resources/application.properties
+++ b/Experiments/Bo/helloworld/src/main/resources/application.properties
@@ -1,1 +1,4 @@
+# This is the port the web server will run on
 server.port = 8080 
+#spring.mvc.log-request-details=true
+#logging.level.org.springframework.web=DEBUG
