--- a/Experiments/Billy/Login_Example/app/src/main/AndroidManifest.xml
+++ b/Experiments/Billy/Login_Example/app/src/main/AndroidManifest.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:dist="http://schemas.android.com/apk/distribution">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <dist:module dist:instant="true" />
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -15,10 +13,10 @@
         android:theme="@style/Theme.AndroidExample"
         tools:targetApi="31">
         <activity
-            android:name=".CounterActivity"
+            android:name=".SignupActivity"
             android:exported="false" />
         <activity
-            android:name=".MitraActivity"
+            android:name=".LoginActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
@@ -29,7 +27,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
+        <activity android:exported="false"
+            android:name=".MitraActivity">
 
+        </activity>
+    </application>
 
 </manifest>
