--- a/Experiments/CharlesArroyo/Unit 2/Example1SQL/springboot_example/pom.xml
+++ b/Experiments/CharlesArroyo/Unit 2/Example1SQL/springboot_example/pom.xml
@@ -10,9 +10,9 @@
 
   <!-- To make it a spring boot project -->
   <parent>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.4.0</version>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>8.0.22</version>
   </parent>
 
   <name>one-to-one</name>
