added mysql to as one of the dependencies

--- a/Experiments/Bo/unit2/unit2_1/springboot_example/pom.xml
+++ b/Experiments/Bo/unit2/unit2_1/springboot_example/pom.xml
@@ -42,6 +42,13 @@
         <scope>runtime</scope>
     </dependency>
 
+    <!-- MYSQL dependencies-->
+    <dependency>
+      <groupId>mysql</groupId>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+    </dependency>
+
     <!-- The ORM JPA specs/hibernate impl -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
