--- a/Experiments/CharlesArroyo/Unit 2/#1/springboot_example/pom.xml
+++ b/Experiments/CharlesArroyo/Unit 2/#1/springboot_example/pom.xml
@@ -10,10 +10,11 @@
 
   <!-- To make it a spring boot project -->
   <parent>
-    <groupId>mysql</groupId>
-    <artifactId>mysql-connector-java</artifactId>
-    <version>8.0.22</version>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>3.1.4</version>
   </parent>
+
 
   <name>one-to-one</name>
 
@@ -34,19 +35,20 @@
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
     
-    <!-- The H2 database dependency -->
-    <dependency>
-        <groupId>com.h2database</groupId>
-        <artifactId>h2</artifactId>
-        <version>1.4.200</version>
-        <scope>runtime</scope>
-    </dependency>
+<!--    &lt;!&ndash; The H2 database dependency &ndash;&gt;-->
+<!--    <dependency>-->
+<!--        <groupId>com.h2database</groupId>-->
+<!--        <artifactId>h2</artifactId>-->
+<!--        <version>1.4.200</version>-->
+<!--        <scope>runtime</scope>-->
+<!--    </dependency>-->
 
     <!-- MYSQL dependencies -->
-	<dependency>
-	  <groupId>mysql</groupId>
-	  <artifactId>mysql-connector-java</artifactId>
-	</dependency>
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+    </dependency>
+
 
     <!-- The ORM JPA specs/hibernate impl -->
     <dependency>
