--- a/Experiments/CharlesArroyo/Unit 2/#1/springboot_example/pom.xml
+++ b/Experiments/CharlesArroyo/Unit 2/#1/springboot_example/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xmlns="http://maven.apache.org/POM/4.0.0"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+         xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
   <groupId>coms309</groupId>
@@ -15,15 +15,14 @@
     <version>3.1.4</version>
   </parent>
 
-
   <name>one-to-one</name>
 
   <properties>
 
     <!-- Generic properties -->
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <java.version>11</java.version>
+    <!--    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>-->
+    <!--    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>-->
+    <!--    <java.version>11</java.version>-->
 
   </properties>
 
@@ -34,21 +33,24 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
-    
-<!--    &lt;!&ndash; The H2 database dependency &ndash;&gt;-->
-<!--    <dependency>-->
-<!--        <groupId>com.h2database</groupId>-->
-<!--        <artifactId>h2</artifactId>-->
-<!--        <version>1.4.200</version>-->
-<!--        <scope>runtime</scope>-->
-<!--    </dependency>-->
 
-    <!-- MYSQL dependencies -->
+    <!-- The H2 database dependency -->
     <dependency>
-      <groupId>mysql</groupId>
-      <artifactId>mysql-connector-java</artifactId>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <version>1.4.200</version>
+      <scope>runtime</scope>
     </dependency>
 
+    <!-- MYSQL dependencies -->
+    <!--	<dependency>-->
+    <!--	  <groupId>mysql</groupId>-->
+    <!--	  <artifactId>mysql-connector-java</artifactId>-->
+    <!--	</dependency>-->
+    <dependency>
+      <groupId>com.mysql</groupId>
+      <artifactId>mysql-connector-j</artifactId>
+    </dependency>
 
     <!-- The ORM JPA specs/hibernate impl -->
     <dependency>
@@ -66,6 +68,6 @@
       </plugin>
     </plugins>
   </build>
-  
+
 
 </project>
