--- a/Experiments/Bo/unit2/uint2_1_sql/springboot_example/pom.xml
+++ b/Experiments/Bo/unit2/uint2_1_sql/springboot_example/pom.xml
@@ -12,7 +12,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.4.0</version>
+    <version>3.1.4</version>
   </parent>
 
   <name>one-to-one</name>
@@ -20,9 +20,9 @@
   <properties>
 
     <!-- Generic properties -->
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <java.version>11</java.version>
+<!--    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>-->
+<!--    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>-->
+<!--    <java.version>11</java.version>-->
 
   </properties>
 
@@ -43,10 +43,14 @@
     </dependency>
 
     <!-- MYSQL dependencies -->
-	<dependency>
-	  <groupId>mysql</groupId>
-	  <artifactId>mysql-connector-java</artifactId>
-	</dependency>
+<!--	<dependency>-->
+<!--	  <groupId>mysql</groupId>-->
+<!--	  <artifactId>mysql-connector-java</artifactId>-->
+<!--	</dependency>-->
+    <dependency>
+      <groupId>com.mysql</groupId>
+      <artifactId>mysql-connector-j</artifactId>
+    </dependency>
 
     <!-- The ORM JPA specs/hibernate impl -->
     <dependency>
