--- a/Experiments/Bo/unit2/unit2_1/springboot_example/src/main/resources/application.properties
+++ b/Experiments/Bo/unit2/unit2_1/springboot_example/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:testdb
 
 
-#spring.datasource.url=jdbc:mysql://coms-309-023.class.las.iastate.edu:3306/DB309?useSSL=false&serverTimezone=CST&useLegacyDatetimeCode=false
-#spring.datasource.username=bhoo
-#spring.datasource.password=Pawhtetoo69@
+#spring.datasource.url=jdbc:mysql://localhost:3306/mydb?useSSL=false&serverTimezone=CST&useLegacyDatetimeCode=false
+#spring.datasource.username=root
+#spring.datasource.password=password
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #spring.jpa.hibernate.ddl-auto=update
