--- a/Experiments/Bo/unit2/unit2_2/springboot_example/pom.xml
+++ b/Experiments/Bo/unit2/unit2_2/springboot_example/pom.xml
@@ -12,7 +12,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.4.0</version>
+    <version>3.1.4</version>
   </parent>
 
   <name>one-to-many</name>
@@ -20,9 +20,9 @@
   <properties>
 
     <!-- Generic properties -->
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <java.version>11</java.version>
+<!--    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>-->
+<!--    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>-->
+<!--    <java.version>11</java.version>-->
 
   </properties>
 
