--- a/Frontend/app/src/main/AndroidManifest.xml
+++ b/Frontend/app/src/main/AndroidManifest.xml
@@ -12,12 +12,20 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CoupV2"
         tools:targetApi="31">
+
+        <!-- Main activity that serves as the entry point for the application -->
         <activity
             android:name=".MainActivity"
             android:exported="true">
+        </activity>
+
+        <!-- LoginActivity that might be launched from MainActivity or other places -->
+        <activity
+            android:name=".LoginActivity"
+            android:exported="true">
+            <!-- This activity is the main entry point of the app and appears in the app launcher -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
