--- a/Frontend/app/src/main/AndroidManifest.xml
+++ b/Frontend/app/src/main/AndroidManifest.xml
@@ -8,9 +8,9 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/icon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/icon"
         android:supportsRtl="true"
         android:theme="@style/Theme.CoupV2"
         tools:targetApi="31">
@@ -26,13 +26,11 @@
             </intent-filter>
         </activity>
 
-        <!-- Sign up activity -->
         <activity
             android:name=".SignupActivity"
             android:exported="true" />
 
-        <!-- LoginActivity that might be launched from MainActivity or other places -->
-        <activity
+         <activity
             android:name=".LoginActivity"
             android:exported="false">
         </activity>
