--- a/Experiments/CharlesArroyo/Unit3/WebSocketDB/websocket3/pom.xml
+++ b/Experiments/CharlesArroyo/Unit3/WebSocketDB/websocket3/pom.xml
@@ -20,6 +20,13 @@
 	</properties>
 
 	<dependencies>
+
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.28</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
