--- a/Frontend/app/src/main/AndroidManifest.xml
+++ b/Frontend/app/src/main/AndroidManifest.xml
@@ -60,6 +60,9 @@
         <activity
             android:name=".StatsActivity"
             android:exported="false" />
+        <activity
+            android:name=".ActionActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
