Work with this branch bo

--- a/Backend/gameFile/pom.xml
+++ b/Backend/gameFile/pom.xml
@@ -34,11 +34,13 @@
     </dependency>
 
 
+
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
-      <optional>true</optional>
+      <scope>provided</scope>
     </dependency>
+
 
     <!-- Spring Boot Web dependencies -->
     <dependency>
