made changes to game ui and added websockets

--- a/Frontend/app/src/main/AndroidManifest.xml
+++ b/Frontend/app/src/main/AndroidManifest.xml
@@ -63,6 +63,9 @@
         <activity
             android:name=".ActionActivity"
             android:exported="false" />
+        <activity
+            android:name=".LobbyActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
