--- a/Frontend/app/src/main/AndroidManifest.xml
+++ b/Frontend/app/src/main/AndroidManifest.xml
@@ -69,6 +69,9 @@
         <activity
             android:name=".PlayActivity"
             android:exported="false" />
+        <activity
+            android:name=".Game"
+            android:exported="false" />
     </application>
 
 </manifest>
