--- a/Backend/gameFile/pom.xml
+++ b/Backend/gameFile/pom.xml
@@ -28,6 +28,9 @@
 
   <dependencies>
 
+
+
+
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-websocket</artifactId>
@@ -68,12 +71,34 @@
       <artifactId>mysql-connector-j</artifactId>
     </dependency>
 
+
+    //Using the Springfox implementation of the Swagger specification
+    <dependency>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-swagger2</artifactId>
+      <version>3.0.0</version>
+    </dependency>
+
+    //Spring Boot Dependency
+    <dependency>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-boot-starter</artifactId>
+      <version>3.0.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-parent</artifactId>
+      <version>3.1.5</version>
+    </dependency>
+
+
+
     <!-- The ORM JPA specs/hibernate impl -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-jpa</artifactId>
     </dependency>
-
   </dependencies>
 
   <build>
