--- a/Backend/gameFile/pom.xml
+++ b/Backend/gameFile/pom.xml
@@ -33,6 +33,13 @@
       <artifactId>spring-boot-starter-websocket</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-boot-starter</artifactId>
+      <version>3.0.0</version>
+    </dependency>
+
+
 
 
     <dependency>
