--- a/Frontend/app/build.gradle
+++ b/Frontend/app/build.gradle
@@ -18,7 +18,7 @@ android {
 
     buildTypes {
         release {
-            isMinifyEnabled = false
+            minifyEnabled = false
             proguardFiles(getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro")
         }
     }
@@ -28,6 +28,39 @@ android {
     }
 }
 
+task javadoc(type: Javadoc) {
+
+    doFirst {
+        configurations.implementation
+            .filter { it.name.endsWith('.aar') }
+            .filter { it.name.endsWith('.aar') }
+            .each { aar ->
+                copy {
+                    from zipTree(aar)
+                    include "**/classes.jar"
+                    into "$buildDir/tmp/aarsToJars/${aar.name.replace('.aar', '')}/"
+                }
+            }
+    }
+
+    configurations.implementation.setCanBeResolved(true)
+    source = android.sourceSets.main.java.srcDirs
+    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+    classpath += configurations.implementation
+    classpath += fileTree(dir: "$buildDir/tmp/aarsToJars/")
+
+    android.applicationVariants.all { variant ->
+        if (variant.name == 'release') {
+            owner.classpath += variant.javaCompileProvider.get().classpath
+        }
+    }
+
+    destinationDir = file("${project.buildDir}/outputs/javadoc/")
+    options.memberLevel = JavadocMemberLevel.PRIVATE
+    failOnError false
+    exclude '**/BuildConfig.java'
+    exclude '**/R.java'
+}
 
 dependencies {
     implementation ("org.java-websocket:Java-WebSocket:1.5.1")
