--- a/Backend/gameFile/pom.xml
+++ b/Backend/gameFile/pom.xml
@@ -15,6 +15,8 @@
     <version>3.1.4</version>
   </parent>
 
+
+
   <name>one-to-one</name>
 
   <properties>
@@ -33,12 +35,15 @@
       <artifactId>spring-boot-starter-websocket</artifactId>
     </dependency>
 
-    <dependency>
-      <groupId>io.springfox</groupId>
-      <artifactId>springfox-boot-starter</artifactId>
-      <version>3.0.0</version>
-    </dependency>
 
+
+
+
+<!--    <dependency>-->
+<!--      <groupId>org.springdoc</groupId>-->
+<!--      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>-->
+<!--      <version>2.0.3</version>-->
+<!--    </dependency>-->
 
 
 
@@ -56,24 +61,24 @@
     </dependency>
 
 
-    
-    <!-- The H2 database dependency -->
-    <dependency>
-        <groupId>com.h2database</groupId>
-        <artifactId>h2</artifactId>
-        <version>1.4.200</version>
-        <scope>runtime</scope>
-    </dependency>
 
-    <!-- MYSQL dependencies -->
+<!--     MYSQL dependencies -->
 <!--	<dependency>-->
 <!--	  <groupId>mysql</groupId>-->
 <!--	  <artifactId>mysql-connector-java</artifactId>-->
 <!--	</dependency>-->
+
     <dependency>
       <groupId>com.mysql</groupId>
       <artifactId>mysql-connector-j</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>org.springdoc</groupId>
+      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+      <version>2.2.0</version>
+    </dependency>
+
 
     <!-- The ORM JPA specs/hibernate impl -->
     <dependency>
