created a method for deciding a lobby is full from backend, removed unused code from GameChatActivity, and updated Manifest file

--- a/Frontend/app/src/main/AndroidManifest.xml
+++ b/Frontend/app/src/main/AndroidManifest.xml
@@ -70,7 +70,7 @@
             android:name=".PlayActivity"
             android:exported="false" />
         <activity
-            android:name=".Game"
+            android:name=".GameChatActivity"
             android:exported="false" />
     </application>
 
