--- a/Backend/gameFile/pom.xml
+++ b/Backend/gameFile/pom.xml
@@ -34,11 +34,18 @@
       <artifactId>spring-boot-starter-websocket</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-test</artifactId>
+      <scope>test</scope>
+    </dependency>
 
 
 
 
-<!--    <dependency>-->
+
+
+    <!--    <dependency>-->
 <!--      <groupId>org.springdoc</groupId>-->
 <!--      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>-->
 <!--      <version>2.0.3</version>-->
@@ -83,6 +90,16 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-jpa</artifactId>
+    </dependency>
+
+
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-test</artifactId>
     </dependency>
 
   </dependencies>
