--- a/Backend/gameFile/pom.xml
+++ b/Backend/gameFile/pom.xml
@@ -66,9 +66,16 @@
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.13.0</version>
+    </dependency>
 
 
-<!--     MYSQL dependencies -->
+
+
+    <!--     MYSQL dependencies -->
 <!--	<dependency>-->
 <!--	  <groupId>mysql</groupId>-->
 <!--	  <artifactId>mysql-connector-java</artifactId>-->
