--- a/Backend/gameFile/pom.xml
+++ b/Backend/gameFile/pom.xml
@@ -50,8 +50,22 @@
 <!--      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>-->
 <!--      <version>2.0.3</version>-->
 <!--    </dependency>-->
+    <!--    </asdfasdf>-->
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20210307</version>
+    </dependency>
 
+    <!--    </asdfasdfasdf>-->
 
+    <!--    </sadfasdfasdfasdf>-->
+    <dependency>
+      <groupId>com.googlecode.json-simple</groupId>
+      <artifactId>json-simple</artifactId>
+      <version>1.1.1</version>
+    </dependency>
+    <!--    </dafgdfasdfs>-->
 
     <dependency>
       <groupId>org.projectlombok</groupId>
@@ -107,6 +121,12 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-test</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.vaadin.external.google</groupId>
+      <artifactId>android-json</artifactId>
+      <version>0.0.20131108.vaadin1</version>
+      <scope>compile</scope>
     </dependency>
 
   </dependencies>
