Enhanced ActionActivity with OnResume updates, improved PlayActivity with additional variables and UI update method, introduced TestActivity for testing, and updated WebSocket functionality.
added OnResume method to ActionActivity and websockets, added variables to PlayActivity and updatePlayerUi method, added TestActivity class and xml, added new Icon which displays waiting text for players and updated mainfest

--- a/Frontend/app/src/main/AndroidManifest.xml
+++ b/Frontend/app/src/main/AndroidManifest.xml
@@ -15,17 +15,19 @@
         android:theme="@style/Theme.CoupV2"
         tools:targetApi="31">
 
-        <!-- Main activity that serves as the entry point for the application -->
-        <activity
-            android:name=".MainActivity"
-            android:exported="true">
-            <!-- This activity is the main entry point of the app and appears in the app launcher -->
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+<!--         Main activity that serves as the entry point for the application -->
+<!--        <activity-->
+<!--            android:name=".MainActivity"-->
+<!--            android:exported="true">-->
+<!--            &lt;!&ndash; This activity is the main entry point of the app and appears in the app launcher &ndash;&gt;-->
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
+<!--        </activity>-->
 
+
+        <activity android:name=".MainActivity" android:exported="true"/>
         <activity
             android:name=".SignupActivity"
             android:exported="true" />
@@ -69,6 +71,29 @@
         <activity
             android:name=".PlayActivity"
             android:exported="false" />
+<!--        <activity-->
+<!--            android:name=".TestActivity"-->
+<!--            android:exported="false" />-->
+        <activity
+            android:name=".TestActivity"
+            android:exported="true">
+            <!-- This activity is the main entry point of the app and appears in the app launcher -->
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <!-- Set PlayActivity as the starting activity -->
+<!--        <activity-->
+<!--            android:name=".PlayActivity"-->
+<!--            android:exported="true"> &lt;!&ndash; Ensure this is true as this activity will be the entry point &ndash;&gt;-->
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN"/>-->
+<!--                <category android:name="android.intent.category.LAUNCHER"/>-->
+<!--            </intent-filter>-->
+<!--        </activity>-->
+
         <activity
             android:name=".GameChatActivity"
             android:exported="false" />
