Added OnPause Method to AfterCreateLobbyActivity and some log test messages, added test message to PlayActivity and switched order of OnMessage method, added getWebSocketListener method to WebSocket Manager class and changed manifest to allow for debugging. This code works for testing.

--- a/Frontend/app/src/main/AndroidManifest.xml
+++ b/Frontend/app/src/main/AndroidManifest.xml
@@ -70,7 +70,7 @@
             android:exported="false" />
         <activity
             android:name=".PlayActivity"
-            android:exported="false" />
+            android:exported="true" />
 <!--        <activity-->
 <!--            android:name=".TestActivity"-->
 <!--            android:exported="false" />-->
