--- a/Frontend/app/src/main/AndroidManifest.xml
+++ b/Frontend/app/src/main/AndroidManifest.xml
@@ -68,31 +68,32 @@
         <activity
             android:name=".AfterJoinLobbyActivity"
             android:exported="false" />
-        <activity
-            android:name=".PlayActivity"
-            android:exported="true" />
+<!--        <activity-->
+<!--            android:name=".PlayActivity"-->
+<!--            android:exported="true" />-->
 <!--        <activity-->
 <!--            android:name=".TestActivity"-->
 <!--            android:exported="false" />-->
-        <activity
-            android:name=".TestActivity"
-            android:exported="true">
-            <!-- This activity is the main entry point of the app and appears in the app launcher -->
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
 
-        <!-- Set PlayActivity as the starting activity -->
 <!--        <activity-->
-<!--            android:name=".PlayActivity"-->
-<!--            android:exported="true"> &lt;!&ndash; Ensure this is true as this activity will be the entry point &ndash;&gt;-->
+<!--            android:name=".TestActivity"-->
+<!--            android:exported="true">-->
+<!--            &lt;!&ndash; This activity is the main entry point of the app and appears in the app launcher &ndash;&gt;-->
 <!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN"/>-->
-<!--                <category android:name="android.intent.category.LAUNCHER"/>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
 <!--            </intent-filter>-->
 <!--        </activity>-->
+
+        <!-- Set PlayActivity as the starting activity -->
+        <activity
+            android:name=".PlayActivity"
+            android:exported="true"> <!-- Ensure this is true as this activity will be the entry point -->
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
 
         <activity
             android:name=".GameChatActivity"
