--- a/Frontend/app/src/main/AndroidManifest.xml
+++ b/Frontend/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.CoupV2"
         tools:targetApi="31">
 
-<!--         Main activity that serves as the entry point for the application -->
+<!--         Main activity that serves as the entry point for the application-->
 <!--        <activity-->
 <!--            android:name=".MainActivity"-->
 <!--            android:exported="true">-->
@@ -58,7 +58,7 @@
             android:exported="false" />
         <activity
             android:name=".ActionActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".LobbyActivity"
             android:exported="false" />
@@ -69,32 +69,31 @@
             android:name=".AfterJoinLobbyActivity"
             android:exported="false" />
 <!--        <activity-->
-<!--            android:name=".PlayActivity"-->
-<!--            android:exported="true" />-->
-<!--        <activity-->
 <!--            android:name=".TestActivity"-->
 <!--            android:exported="false" />-->
 
-<!--        <activity-->
-<!--            android:name=".TestActivity"-->
-<!--            android:exported="true">-->
-<!--            &lt;!&ndash; This activity is the main entry point of the app and appears in the app launcher &ndash;&gt;-->
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
-<!--        </activity>-->
-
-        <!-- Set PlayActivity as the starting activity -->
         <activity
-            android:name=".PlayActivity"
-            android:exported="true"> <!-- Ensure this is true as this activity will be the entry point -->
+            android:name=".TestActivity"
+            android:exported="true">
+            <!-- This activity is the main entry point of the app and appears in the app launcher -->
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
+        <!-- Set PlayActivity as the starting activity -->
+<!--        <activity-->
+<!--            android:name=".PlayActivity"-->
+<!--            android:exported="true"> &lt;!&ndash; Ensure this is true as this activity will be the entry point &ndash;&gt;-->
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN"/>-->
+<!--                <category android:name="android.intent.category.LAUNCHER"/>-->
+<!--            </intent-filter>-->
+<!--        </activity>-->
+                <activity
+                    android:name=".PlayActivity"
+                    android:exported="true" />
         <activity
             android:name=".GameChatActivity"
             android:exported="false" />
