--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Ignore build directory
 /build
-/DS_Store
-/idea
+
+# Ignore macOS DS_Store files
+.DS_Store
+
+# Ignore IntelliJ IDEA directory
+.idea
