--- a/Backend/gameFile/src/main/resources/application.properties
+++ b/Backend/gameFile/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-server.port = 8443
+server.port = 8080
 
 #spring.datasource.url=jdbc:mysql://localhost:3306/testSchema?useSSL=false
 #spring.datasource.url=http://coms-309-023.class.las.iastate.edu:8080/swagger-ui/
 
 #spring.datasource.url=http://coms-309-023.class.las.iastate.edu:3306/swagger-ui/
-spring.datasource.url=jdbc:mysql://coms-309-023.class.las.iastate.edu:3306/boTesting?useSSL=false
+spring.datasource.url=jdbc:mysql://coms-309-023.class.las.iastate.edu:3306/final?useSSL=false
 spring.datasource.username=bhoo
 spring.datasource.password=Pawhtetoo69@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
