edited the .gitlab-ci.yml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ maven-build:
   tags:                 # to specify which runner to execute this job
     - springboot_tag    # change to your runner's tag
   script:               # what to execute for this job
-    - cd Backend        # change 'Backend' to to where you have the pom.xml (do not add / in the beginning)
+    - cd Backend/**/*        # change 'Backend' to to where you have the pom.xml (do not add / in the beginning)
     - mvn package       # maven package
   artifacts:            # where to output the packaged jar file, change 'Backend' to to where you have the pom.xml
     paths:
@@ -26,7 +26,7 @@ maven-test:
   tags:
      - springboot_tag   # change to your runner's tag
   script:
-     - cd Backend       # change 'Backend' to to where you have the pom.xml (do not add / in the beginning)
+     - cd Backend/**/*       # change 'Backend' to to where you have the pom.xml (do not add / in the beginning)
      - mvn test         # maven test
   only:
     refs:
