changed the pom.xml for jdk 17

--- a/Backend/gameFile/pom.xml
+++ b/Backend/gameFile/pom.xml
@@ -20,10 +20,10 @@
 
   <properties>
 
-    <!-- Generic properties -->
-<!--    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>-->
-<!--    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>-->
-<!--    <java.version>11</java.version>-->
+<!--     Generic properties -->
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    <java.version>17</java.version> <!-- Set this to the Java version you need -->
 
   </properties>
 
