--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,42 +3,27 @@ stages:
   - maventest
 
 maven-build:
-  stage: mavenbuild # one of the stages listed above
-  tags: # to specify which runner to execute this job
-    - bo_tag # change to your runner's tag
-  script: # what to execute for this job
-    - cd Backend/**/* # change 'Backend' to to where you have the pom.xml (do not add / in the beginning)
-    - mvn package # maven package
-  artifacts: # where to output the packaged jar file, change 'Backend' to to where you have the pom.xml
-    paths:
-      - Backend/target/*.jar
-  only:
-    refs:
-      - main # only to trigger the pipeline when changes are pushed to 'main'
-    changes:
-      - Backend/**/* # more specifically - only when changes are made inside the 'Backend' folder
-
-maven-test:
-  stage: maventest # one of the stages listed above
+  stage: mavenbuild
   tags:
     - bo_tag # <-- change to your runner's tag
   script:
     - cd Backend/**/* # change 'Backend' to to where you have the pom.xml (do not add / in the beginning)
-    - mvn test # maven test
+    - mvn package
   only:
     refs:
       - Bo_CICD
     changes:
       - Backend/**/*
-# maven-test:
-#   stage: maventest
-#   tags:
-#     - bo_tag     # <-- change to your runner's tag
-#   script:
-#     - cd Backend/**/*       # change 'Backend' to to where you have the pom.xml (do not add / in the beginning)
-#     - mvn test
-#   only:
-#     refs:
-#       - Bo_CICD
-#     changes:
-#       - Backend/**/*
+
+maven-test:
+  stage: maventest
+  tags:
+    - bo_tag # <-- change to your runner's tag
+  script:
+    - cd Backend/**/8 # change 'Backend' to to where you have the pom.xml (do not add / in the beginning)
+    - mvn test
+  only:
+    refs:
+      - Bo_CICD
+    changes:
+      - Backend/**/*
