--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ maven-build:
     refs:
       - Bo_CICD
     changes:
-      - Backend/**/*
+      - Backend/gameFile/
 
 maven-test:
   stage: maventest
@@ -26,4 +26,4 @@ maven-test:
     refs:
       - Bo_CICD
     changes:
-      - Backend/**/*
+      - Backend/gameFile/
