fixed mvn deploy

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ maven-build:
     - mvn package # maven package
   artifacts: # where to output the packaged jar file, change 'Backend' to to where you have the pom.xml
     paths:
-      - Backend/target/onetoone-1.0.0.jar
+      - Backend/gameFile/target/onetoone-1.0.0.jar
   only:
     refs:
       - main # only to trigger the pipeline when changes are pushed to 'main'
@@ -40,7 +40,7 @@ auto-deploy:
     - springboot_tag # change to your runner's tag
   script: # script to run the deployment service you created
     - cd Backend # change 'Backend' to to where you have the pom.xml (do not add / in the beginning)
-    - sudo mv target/onetoone-1.0.0.jar /target/web-demo.jar
+    - sudo mv gameFile/target/onetoone-1.0.0.jar /target/web-demo.jar
     - sudo systemctl stop system-web-demo
     - sudo systemctl start system-web-demo
   only:
