--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -58,7 +58,7 @@ android-build:
     - export GRADLE_USER_HOME=`pwd`/.gradle
     - chmod +x ./Frontend/gradlew
   script:
-    - cd Frontend # change 'Frontend' to where you have 'gradlew' (do not add / in the beginning)
+    - cd Frontend/ # change 'Frontend' to where you have 'gradlew' (do not add / in the beginning)
     - ./gradlew build # gradle build
   only:
     refs:
@@ -75,7 +75,7 @@ android-test:
     - export GRADLE_USER_HOME=`pwd`/.gradle
     - chmod +x ./Frontend/gradlew
   script:
-    - cd Frontend # change 'Frontend' to where you have 'gradlew' (do not add / in the beginning)
+    - cd Frontend/ # change 'Frontend' to where you have 'gradlew' (do not add / in the beginning)
     - ./gradlew test # gradle test
   only:
     refs:
