--- a/Backend/gameFile/pom.xml
+++ b/Backend/gameFile/pom.xml
@@ -21,9 +21,9 @@
   <properties>
 
     <!-- Generic properties -->
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <java.version>17</java.version>
+<!--    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>-->
+<!--    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>-->
+<!--    <java.version>17</java.version>-->
 
   </properties>
 
