--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -53,7 +53,7 @@ android-build:
   image: afirefly/android-ci:java17 # Docker image that has Android environments installed     gjandres/android-ci:latest
   stage: androidbuild # one of the stages listed above
   tags:
-    - android_tag # change to your runner's tag
+    - billy_tag # change to your runner's tag
   before_script: # enable gradlew, change 'Frontend' to where you have 'gradlew'
     - export GRADLE_USER_HOME=`pwd`/.gradle
     - chmod +x ./Frontend/gradlew
@@ -70,7 +70,7 @@ android-test:
   image: afirefly/android-ci:java17
   stage: androidtest # one of the stages listed above
   tags:
-    - android_tag # change to your runner's tag
+    - billy_tag # change to your runner's tag
   before_script: # enable gradlew, change 'Frontend' to where you have 'gradlew'
     - export GRADLE_USER_HOME=`pwd`/.gradle
     - chmod +x ./Frontend/gradlew
