--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,15 +6,16 @@ android-build:
   image: afirefly/android-ci:java17
   stage: androidbuild
   tags:
-   - billy_tag                   # <-- change to your runner's tag
-  before_script:                    # change 'Frontend' to where you have 'gradlew'
+    - billy_tag
+  before_script:
     - export GRADLE_USER_HOME=`pwd`/.gradle
     - chmod +x ./Frontend/gradlew
   script:
-    - cd Frontend                   # change 'Frontend' to where you have 'gradlew' (do not add / in the beginning)
+    - cd Frontend
     - ./gradlew build
   only:
     refs:
+      - main
       - BILLY_CICD
     changes:
       - Frontend/**/*
@@ -23,16 +24,16 @@ android-test:
   image: afirefly/android-ci:java17
   stage: androidtest
   tags:
-    - billy_tag                  # <-- change to your runner's tag
-  before_script:                   # change 'Frontend' to where you have 'gradlew'
+    - billy_tag
+  before_script:
     - export GRADLE_USER_HOME=`pwd`/.gradle
     - chmod +x ./Frontend/gradlew
   script:
-    - cd Frontend                  # change 'Frontend' to where you have 'gradlew' (do not add / in the beginning)
+    - cd Frontend
     - ./gradlew test
   only:
     refs:
+      - main
       - BILLY_CICD
     changes:
       - Frontend/**/*
-
