--- a/Frontend/app/src/main/AndroidManifest.xml
+++ b/Frontend/app/src/main/AndroidManifest.xml
@@ -75,7 +75,16 @@
             android:name=".TestActivity"
             android:exported="false" />
 
-<!--        <activity-->
+        <activity
+            android:name=".ListActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".AdminActivity"
+            android:exported="false" />
+
+
+        <!--        <activity-->
 <!--            android:name=".TestActivity"-->
 <!--            android:exported="true">-->
 <!--            &lt;!&ndash; This activity is the main entry point of the app and appears in the app launcher &ndash;&gt;-->
