--- a/Backend/gameFile/pom.xml
+++ b/Backend/gameFile/pom.xml
@@ -37,6 +37,24 @@
 
     <dependency>
       <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-test</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.rest-assured</groupId>
+      <artifactId>rest-assured</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.13.2</version>
+      <scope>test</scope>
+    </dependency>
+
+
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-websocket</artifactId>
     </dependency>
 
@@ -62,6 +80,8 @@
       <artifactId>json</artifactId>
       <version>20210307</version>
     </dependency>
+
+
 
     <!--    </asdfasdfasdf>-->
 
