made changes to AfterCreateLobby by removing unused code, adding test message, and adding back button. removed listener in AfterJoinLobby, fixed exchange in PlayActivity and cleaned code, fixed spectator layout, changed test activity,

--- a/Frontend/app/src/main/AndroidManifest.xml
+++ b/Frontend/app/src/main/AndroidManifest.xml
@@ -36,6 +36,10 @@
             android:name=".LoginActivity"
             android:exported="false">
         </activity>
+        <activity
+            android:name=".SpectatorActivity"
+            android:exported="false">
+        </activity>
 
         <activity
             android:name=".MenuActivity"
@@ -71,9 +75,9 @@
         <activity
             android:name=".AfterJoinLobbyActivity"
             android:exported="false" />
-        <activity
-            android:name=".TestActivity"
-            android:exported="false" />
+<!--        <activity-->
+<!--            android:name=".TestActivity"-->
+<!--            android:exported="false" />-->
 
         <activity
             android:name=".ListActivity"
